implement recycle bin

--- a/TextKeeper/Views/File/Backup.cshtml
+++ b/TextKeeper/Views/File/Backup.cshtml
@@ -3,21 +3,19 @@
     ViewData["Title"] = "File Manager";
 }
 
-<h2>Files</h2>
+<h2>Recycle Bin</h2>
 
-<form method="get" asp-action="Index">
+<form method="get" asp-action="Backup">
     <input type="text" name="search" placeholder="Search files..." />
     <button type="submit">Search</button>
 </form>
-
 
 <ul>
     @foreach (var file in Model)
     {
         <li>
             @file
-            <a asp-action="Edit" asp-route-fileName="@file">Edit</a> |
-            <a asp-action="Delete" asp-route-fileName="@file">Delete</a>
+            <a asp-action="PermanentDelete" asp-route-fileName="@file">Delete</a>
         </li>
     }
 </ul>
