--- a/TextKeeper/Views/Shared/_Layout.cshtml
+++ b/TextKeeper/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="File" asp-action="Create">Create</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="File" asp-action="Backup">Recycle Bin</a>
+                        </li>
                     </ul>
                 </div>
             </div>
