Implement resotre file

--- a/TextKeeper/Views/File/Backup.cshtml
+++ b/TextKeeper/Views/File/Backup.cshtml
@@ -16,6 +16,7 @@
         <li>
             @file
             <a asp-action="PermanentDelete" asp-route-fileName="@file">Delete</a>
+            <a asp-action="Resotre" asp-route-fileName="@file">Resotre</a>
         </li>
     }
 </ul>
