--- a/TextKeeper/Views/File/Backup.cshtml
+++ b/TextKeeper/Views/File/Backup.cshtml
@@ -17,6 +17,7 @@
             @file
             <a asp-action="PermanentDelete" asp-route-fileName="@file">Delete</a>
             <a asp-action="Resotre" asp-route-fileName="@file">Resotre</a>
+            <a asp-action="ReciclyBinFileView" asp-route-fileName="@file">View</a>
         </li>
     }
 </ul>
